# projetTDD_2026_structure

./: .coverage  .gitignore  Code pour le diagramme de classe  LICENSE  Projet_Tdd.qmd  README.md  main.py  main_bis.py  pyproject.toml
Badminton/: Badminton.R  match.csv  player.csv
Chess/: Chess.R  match.csv  player.csv
Counter_strike_2/: Counter_strike_2.R
Données/Badminton/: match.csv
Données/Counter_strike_2/: coach.csv  match.csv  player.csv  team.csv
Données/Foot_CL/: player.csv
Données/Foot_league_eu/: foot.R
Données/LOL/: LOL.R
Données/Starcraft_2/: match.csv  player.csv
Données/Tennis/: atp_matches_2024.csv  wta_matches_2024.csv
Foot_CL/: Foot_CL.R  match.csv  team.csv
Projet_Tdd/: Projet_Tdd.aux  Projet_Tdd.qmd  Projet_Tdd.tex  header.tex  texte.R
README_files/libs/bootstrap/: bootstrap-db444031b17e9b24065c654d5c01d5f9.min.css
Starcraft_2/: Starcraf_2.R
Tennis/: Tennis.R
Volley/: Volley.R
docs/: Programme diagramme de cas d’utilisation  Programme diagramme de séquence  Programme diagramme des classes
pkg/adapter/: base_adapter.py  generic_coach_adapter.py  generic_entraineur_adapter.py  generic_equipe_adapter.py  generic_joueur_adapter.py  generic_match_adapter.py  generic_player_adapter.py  generic_team_adapter.py  player_adapter.py
pkg/config/: dataset_configuration.py
pkg/models/: coach.py  entraineur.py  equipe.py  joueur.py  match.py  player.py  stats_joueur_basket.py  team.py
pkg/pkg/adapter/: volley_match_adapter.py
pkg/pkg/config/: dataset_configuration.py
pkg/pkg/repository/: data_repository.py
pkg/pkg/services/: stats_service.py
pkg/repository/: data_repository.py
pkg/services/: data_manager.py  gestionnaire_donnes.py  matchs_service.py  service_annuaire_joueur.py  service_application.py  service_statistiques.py  services_matchs.py  stats_joueur_basket.py  stats_service.py
src/project/models/: entraineur.py  joueur.py  match.py  personne.py
tests/: test_adapters.py  test_all.py  test_models.py  test_services.py
