[project]
name = "TGM Statistiques"
version = "1.0.0"
description = "Application de traitement et visualisation de données sportives (NBA & Tennis ATP/WTA)"
authors = [
    { name = "Théau Nguyen--Callot" },
    { name = "Milyan Vukomanovic" },
    { name = "Gwenaël Lassalle" }
]
requires-python = ">=3.12"

# Liste des dépendances classiques (pour pip)
dependencies = [
    "pandas>=2.2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "ruff",
    "mypy",
    "pandas-stubs"
]

# Formatage automatique avec Black
[tool.black]
line-length = 112
target-version = ["py312"]

# Configuration de Ruff (Le linter qui remplace Flake8, isort et pydocstyle)
[tool.ruff]
line-length = 112
target-version = "py312"

[tool.ruff.lint]
# On active les règles Pyflakes (F), pycodestyle (E, W), isort (I), et pydocstyle (D)
select = ["E", "F", "W", "I", "D"]
ignore = ["E203", "D100", "D104"] # On ignore quelques règles trop strictes sur la documentation

[tool.ruff.lint.pydocstyle]
# Convention globale pour tes grosses fonctions
convention = "numpy" 

# Configuration Mypy (Typage statique)
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# Configuration pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]